--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,8 +9,9 @@
  * argument is a `String` with the title of the page, the second
  * argument is an `Html` object containing the body of the page.
  *@
-@main("Welcome to Play") {
+@main("Welcome to Alligator") {
 
-   <h1>Hello Alligator</h1>
+ <div class="col-md-12" id="maincontainer">
+ </div>
 
 }
