--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,16 +1,8 @@
-@*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
-@(message: String)
+@(myHeader: String)
 
-@*
- * Call the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
+@Html(myHeader)
+
 @main("Welcome to Alligator") {
-
  <div class="col-md-12" id="maincontainer">
  </div>
 
