Adding react component

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,14 +8,32 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
-        @* Here's where we render the page title `String`. *@
-        <title>@title</title>
-        <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))'>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>Alligator</title>
+            <!-- Bootstrap Core CSS -->
+        <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/styles.css")'> title="mainStyle">
+
+        <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+        <script src="js/modernizr.custom.32033.js"></script>
     </head>
-    <body>
+
+    <section class="well well-lg">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Alligator - Deductive tool for Industry 4.0 Data Integration</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <body class="well well-lg" >
         @* And here's where we render the `Html` object containing
         * the page content. *@
         @content
@@ -23,7 +41,11 @@
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("JSXTransformer.js"))'></script>
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.fullPath("react", "react.js"))'></script>
-        <script type='text/javascript' src='@routes.Assets.versioned("javascripts/index.js")'></script>
+
+            <div  id="app"></div>
+        <script type="text/javascript" src='@routes.Assets.versioned("javascripts/client.min.js")'></script>
 
     </body>
+
+
 </html>
