--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,16 +18,14 @@
         <title>Alligator</title>
             <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/styles.css")'> title="mainStyle">
-
         <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet"/>
-        <script src="js/modernizr.custom.32033.js"></script>
     </head>
 
     <section class="well well-lg">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <h2>Alligator - Deductive tool for Industry 4.0 Data Integration</h2>
+                <div class="col-md-12">
+                    <h2>Alligator - Semantic Integration for Industry 4.0 Standards</h2>
                 </div>
             </div>
         </div>
@@ -42,7 +40,7 @@
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("JSXTransformer.js"))'></script>
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.fullPath("react", "react.js"))'></script>
 
-            <div  id="app"></div>
+        <div  id="app"></div>
         <script type="text/javascript" src='@routes.Assets.versioned("javascripts/client.min.js")'></script>
 
     </body>
