--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -22,15 +22,15 @@
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/mergely.css")' />
         <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/styles.css")' title="mainStyle">
     </head>
-    <section class="well well-lg">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Alligator - Semantic Integration for Industry 4.0 Standards</h2>
-                </div>
-            </div>
+    <div class="container">
+        <div class="row">
+            <section class="well well-lg">
+              <div class="col-md-6">
+                  <h2>Alligator - Deductive tool for Industry 4.0 Data Integration</h2>
+              </div>
+            </section>
         </div>
-    </section>
+    </div>
 
     <body class="well well-lg" >
         @* And here's where we render the `Html` object containing
