--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1478,3 +1478,136 @@ canvas {
   border-left: 1px solid #ABABAB;
   border-right: 1px solid #ABABAB;
 }
+
+
+section.well.well-lg {
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+  margin: 70px 15px 30px;
+  height: 190px;
+}
+
+nav.navbar.navbar-inverse {
+  background-color: #3b295a;
+  border-color: #332e5a;
+}
+
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
+  background-color: rgba(255,255,255,.1);
+}
+
+.navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus {
+  background-color: rgba(255,255,255,.1);
+}
+
+#app {
+  border: 0;
+  border-top: 1px solid rgba(0,0,0,.1);
+  padding-top: 20px;
+  position: relative;
+}
+
+footer {
+  width: 100%;
+  background-color: #3b295a;
+  height: 50px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+footer p {
+  margin-bottom: 0;
+}
+
+footer b {
+  font-weight:normal;
+}
+
+#file, #file2 {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: 1;
+}
+
+#file + label, #file2 + label {
+  font-weight: 500;
+  color: white;
+  background-color: #3b295a;
+  display: inline-block;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+#file + label:hover, #file2 + label:hover {
+  background-color: #503075;
+}
+
+textarea {
+  width: 100%;
+}
+
+
+.col-sm-5 {
+  position: relative;
+}
+
+.uploadWrapper::before {
+  content: '';
+  height: 460px;
+  position: absolute;
+  background-color: rgba(152, 152, 152, 0.09);
+  top: -10px;
+  left: 5px;
+  right: 5px;
+  bottom: 0;
+  box-shadow: 0 1px 4px 0px rgba(59, 41, 90, 0.26);
+  border-radius: 4px;
+  z-index: -1000;
+}
+
+h3 {
+  margin-bottom: 30px;
+}
+
+button.btn.btn-primary {
+  font-weight: normal;
+  font-size: 15px;
+  padding: 10px 18px;
+  background-color: #3b295a;
+  border: none;
+}
+
+button.btn.btn-primary:hover {
+  background-color: #503075;
+}
+
+.btn-success {
+  background-color: #3b295a;
+  border: none;
+}
+
+.btn-success:hover {
+  background-color: #503075;
+  border: none;
+}
+
+.btn-success:active, .btn-success:focus,
+.btn-success:active:hover, .btn-success:active:focus {
+  background-color: #1e0f29;
+  border: none;
+}
+
+button {
+  width: 170px;
+}
